--- a/src/app/core/auth/pages/auth-form/auth-form.component.html
+++ b/src/app/core/auth/pages/auth-form/auth-form.component.html
@@ -1,7 +1,7 @@
 <!-- component -->
-<div class="bg-blue-400 h-screen w-screen">
+<div class="bg-[#FAF1E6] h-screen w-screen">
     <div class="flex flex-col items-center flex-1 h-full justify-center px-4 sm:px-0">
-        <div class="flex rounded-lg shadow-lg w-full sm:w-3/4 lg:w-1/2 bg-white sm:mx-0" style="height: 500px">
+        <div class="flex rounded-lg shadow-lg w-full sm:w-3/4 lg:w-1/2 bg-[#FDFAF6] sm:mx-0" style="height: 500px">
             <div class="flex flex-col w-full md:w-1/2 p-4">
                 <div class="flex flex-col flex-1 justify-center mb-8">
                     <h1 class="text-4xl text-center font-thin">Welcome Back</h1>
