--- a/src/app/core/auth/pages/auth-form/auth-form.component.html
+++ b/src/app/core/auth/pages/auth-form/auth-form.component.html
@@ -2,6 +2,16 @@
 <div class="bg-[#FAF1E6] h-screen w-screen">
     <div class="flex flex-col items-center flex-1 h-full justify-center px-4 sm:px-0">
         <div class="flex rounded-lg shadow-lg w-full sm:w-3/4 lg:w-1/2 bg-[#FDFAF6] sm:mx-0" style="height: 500px">
+
+
+            @if (!isRegister) {
+
+            <div class="hidden md:block md:w-1/2 rounded-r-lg"
+                style="background: url('https://images.unsplash.com/photo-1515965885361-f1e0095517ea?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80'); background-size: cover; background-position: center center;">
+            </div>
+
+            }
+
             <div class="flex flex-col w-full md:w-1/2 p-4">
                 <div class="flex flex-col flex-1 justify-center mb-8">
                     <h1 class="text-4xl text-center font-thin">Welcome Back</h1>
@@ -35,9 +45,18 @@
                     </div>
                 </div>
             </div>
+
+
+            @if (isRegister) {
+
             <div class="hidden md:block md:w-1/2 rounded-r-lg"
                 style="background: url('https://images.unsplash.com/photo-1515965885361-f1e0095517ea?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80'); background-size: cover; background-position: center center;">
             </div>
+
+            }
+
+
+
         </div>
     </div>
 </div>
