feat(auth): auth form done

--- a/src/app/core/auth/pages/auth-form/auth-form.component.html
+++ b/src/app/core/auth/pages/auth-form/auth-form.component.html
@@ -14,33 +14,83 @@
 
             <div class="flex flex-col w-full md:w-1/2 p-4">
                 <div class="flex flex-col flex-1 justify-center mb-8">
-                    <h1 class="text-4xl text-center font-thin">Welcome Back</h1>
+                    <h1 class="text-4xl text-center font-thin">
+
+                        @if (isRegister) {
+                        Sign Up
+                        } @else {
+                        Sign In
+                        }
+
+                    </h1>
+
                     <div class="w-full mt-4">
-                        <form class="form-horizontal w-3/4 mx-auto" method="POST" action="#">
+                        <form class="form-horizontal w-3/4 mx-auto" [formGroup]="authForm" (ngSubmit)="onSubmit()">
+
+
+                            @if (isRegister) {
+
                             <div class="flex flex-col mt-4">
-                                <input id="email" type="text" class="flex-grow h-8 px-2 border rounded border-grey-400"
-                                    name="email" value="" placeholder="Email">
+                                <input formControlName="fullname" autocomplete="off" type="text"
+                                    class="flex-grow h-8 px-2 border rounded border-grey-400" name="email" value=""
+                                    placeholder="Full Name">
                             </div>
+
+
+                            }
+
+
                             <div class="flex flex-col mt-4">
-                                <input id="password" type="password"
+                                <input formControlName="email" autocomplete="off" id="email" type="email"
+                                    class="flex-grow h-8 px-2 border rounded border-grey-400" name="email" value=""
+                                    placeholder="Email">
+                            </div>
+
+                            <div class="flex flex-col mt-4">
+                                <input id="password" type="password" formControlName="password" autocomplete="off"
                                     class="flex-grow h-8 px-2 rounded border border-grey-400" name="password" required
                                     placeholder="Password">
                             </div>
-                            <div class="flex items-center mt-4">
-                                <input type="checkbox" name="remember" id="remember" class="mr-2"> <label for="remember"
-                                    class="text-sm text-grey-dark">Remember Me</label>
+
+                            @if (isRegister) {
+
+                            <div class="flex flex-col mt-4">
+                                <input id="re-password" type="re-password" formControlName="repassword"
+                                    autocomplete="off" class="flex-grow h-8 px-2 rounded border border-grey-400"
+                                    name="re-password" required placeholder="Re Enter Password">
                             </div>
+
+                            }
+
+
+                            <div class="floating-input">
+                                <span class="text-red-400 err-msg">{{ errMsg() }}</span>
+                            </div>
+
+
                             <div class="flex flex-col mt-8">
                                 <button type="submit"
                                     class="bg-blue-500 hover:bg-blue-700 text-white text-sm font-semibold py-2 px-4 rounded">
-                                    Login
+                                    @if (isRegister) { Create Account } @else { Log In }
                                 </button>
                             </div>
+
                         </form>
                         <div class="text-center mt-4">
-                            <a class="no-underline hover:underline text-blue-dark text-xs" href="#">
-                                Forgot Your Password?
+                            @if (isRegister) {
+
+                            <a routerLink="/login" class="no-underline hover:underline text-blue-dark text-xs">
+                                Already have an account?
                             </a>
+
+                            } @else {
+
+                            <a routerLink="/register" class="no-underline hover:underline text-blue-dark text-xs">
+                                Create Account?
+                            </a>
+
+                            }
+
                         </div>
                     </div>
                 </div>
