--- a/src/app/core/auth/pages/auth-form/auth-form.component.html
+++ b/src/app/core/auth/pages/auth-form/auth-form.component.html
@@ -55,7 +55,7 @@
                             @if (isRegister) {
 
                             <div class="flex flex-col mt-4">
-                                <input id="re-password" type="re-password" formControlName="repassword"
+                                <input id="re-password" type="password" formControlName="repassword"
                                     autocomplete="off" class="flex-grow h-8 px-2 rounded border border-grey-400"
                                     name="re-password" required placeholder="Re Enter Password">
                             </div>
