--- a/src/app/features/chats/pages/chat-home/chat-home.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-home.component.html
@@ -1,1 +1,121 @@
-<p>chat-home works!</p>
+<main>
+    <nav class="lista">
+        <header class="menu">
+            <div class="avatarusuario">
+                <img src="Imagens/avatar1.png" class="usuario">
+            </div>
+            <ul class="opcoes">
+                <li> 
+                    
+                </li>
+                <li>icon </li>
+                <li>icon</li>
+            </ul>
+        </header>
+
+        <section class="notificacoes">
+            <div class="icone_notificacao">
+                icon
+            </div>
+            <div class="detalhes_notificacao">
+                <aside class="aviso_notificacao">
+                    <p>Receba notificações de novas mensagens</p>
+                </aside>
+                <aside class="ativar_notificacoes">
+                    <a onclick="ativar()"id="ativar">Ativar notificações na área de trabalho ﹥</a>
+                </aside>
+            </div>
+        </section>
+
+        <section class="busca">
+            <div class="campobusca">
+                <input type="text" placeholder="Procurar ou começar uma nova conversa">
+                icon
+            </div>
+        </section>
+
+        <section class="listadeconversas">
+            <div class="janeladeconversa ativa">
+                <div class="avatarconversa">
+                    <img src="Imagens/avatar2.png" class="usuario">
+                </div>
+                <div class="detalhes">
+                    <aside class="detalhes_nome">
+                        <h4>Sabrina Matos</h4>
+                        <p class="horario">22:40</p>
+                    </aside>
+                    <aside class="mensagem">
+                        icon
+                        <p>Oi, tudo bem?</p>
+                    </aside>
+                </div>
+            </div>
+
+            <div class="janeladeconversa naolida">
+                <div class="avatarconversa">
+                    <img src="Imagens/avatar3.png" class="usuario">
+                </div>
+                <div class="detalhes">
+                    <aside class="detalhes_nome">
+                        <h4>João Augusto</h4>
+                        <p class="horario">12:30</p>
+                    </aside>
+                    <aside class="mensagem">
+                        <p>Está disponível para um freela?</p>
+                        <b>3</b>
+                    </aside>
+                </div>
+            </div>
+
+            <div class="janeladeconversa naolida">
+                <div class="avatarconversa">
+                    <img src="Imagens/avatar4.png" class="usuario">
+                </div>
+                <div class="detalhes">
+                    <aside class="detalhes_nome">
+                        <h4>Maria Silva</h4>
+                        <p class="horario">08:20</p>
+                    </aside>
+                    <aside class="mensagem">
+                        <p>O projeto ficou perfeito, obrigada!</p>
+                        <b>5</b>
+                    </aside>
+                </div>
+            </div>
+        </section>            
+    </nav>
+
+    <nav class="conversa">
+        <header class="menu">
+            <div class="avatar">
+                <div class="avatarusuario">
+                    <img src="Imagens/avatar2.png" class="usuario">
+                </div>
+                <h4>Sabrina Matos<br><span>Online</span></h4>
+            </div>
+            <ul class="opcoes">
+                <li>icon</li>
+                <li class="anexo">icon</li>
+                <li>icon</li>
+            </ul>
+        </header>
+
+        <section class="corpo_conversa">
+            <div class="mensagem_usuario outrem">
+                <p>Olá, bom dia<span>12:00</span></p>
+            </div>
+
+            <div class="mensagem_usuario proprio">
+                <p>Oi, tudo bem?<span>22:40</span>
+                    icon
+                </p>
+            </div>
+        </section>
+
+        <section class="input_conversa">
+            icon
+            <input type="text" placeholder="Digite uma mensagem">
+            icon
+        </section>
+    </nav>
+</main>
