feat(chat): basic chat ui done

--- a/src/app/features/chats/pages/chat-home/chat-home.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-home.component.html
@@ -1,121 +1,129 @@
-<main>
-    <nav class="lista">
-        <header class="menu">
-            <div class="avatarusuario">
-                <img src="Imagens/avatar1.png" class="usuario">
-            </div>
-            <ul class="opcoes">
-                <li> 
-                    
-                </li>
-                <li>icon </li>
-                <li>icon</li>
-            </ul>
-        </header>
+<main style="width: 100%; height: 100vh">
+  <nav class="lista">
+    <header class="menu">
+      <div class="avatarusuario">
+        <img
+          src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
+          class="usuario"
+        />
+      </div>
+      <ul class="opcoes items-center justify-center">
+        <li>
+          <i class="mt-5 bx bxs-chat"></i>
+        </li>
+        <li>
+          <i class="bx bx-dots-vertical-rounded"></i>
+        </li>
+      </ul>
+    </header>
 
-        <section class="notificacoes">
-            <div class="icone_notificacao">
-                icon
-            </div>
-            <div class="detalhes_notificacao">
-                <aside class="aviso_notificacao">
-                    <p>Receba notificações de novas mensagens</p>
-                </aside>
-                <aside class="ativar_notificacoes">
-                    <a onclick="ativar()"id="ativar">Ativar notificações na área de trabalho ﹥</a>
-                </aside>
-            </div>
-        </section>
+    <section class="listadeconversas">
+      <div class="janeladeconversa hover:bg-gray-100">
+        <div class="avatarconversa">
+          <img
+            src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
+            class="usuario"
+          />
+        </div>
+        <div class="detalhes">
+          <aside class="detalhes_nome">
+            <h4>Sabrina Matos</h4>
+            <p class="horario">22:40</p>
+          </aside>
+          <aside class="mensagem flex items-center gap-1">
+            <i class="bx bx-check-double text-[1.4rem]"></i>
+            <p>Oi, tudo bem?</p>
+          </aside>
+        </div>
+      </div>
 
-        <section class="busca">
-            <div class="campobusca">
-                <input type="text" placeholder="Procurar ou começar uma nova conversa">
-                icon
-            </div>
-        </section>
+      <div class="janeladeconversa naolida">
+        <div class="avatarconversa">
+          <img
+            src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
+            class="usuario"
+          />
+        </div>
+        <div class="detalhes">
+          <aside class="detalhes_nome">
+            <h4>João Augusto</h4>
+            <p class="horario">12:30</p>
+          </aside>
+          <aside class="mensagem">
+            <p>Está disponível para um freela?</p>
+            <b>3</b>
+          </aside>
+        </div>
+      </div>
 
-        <section class="listadeconversas">
-            <div class="janeladeconversa ativa">
-                <div class="avatarconversa">
-                    <img src="Imagens/avatar2.png" class="usuario">
-                </div>
-                <div class="detalhes">
-                    <aside class="detalhes_nome">
-                        <h4>Sabrina Matos</h4>
-                        <p class="horario">22:40</p>
-                    </aside>
-                    <aside class="mensagem">
-                        icon
-                        <p>Oi, tudo bem?</p>
-                    </aside>
-                </div>
-            </div>
+      <div class="janeladeconversa naolida">
+        <div class="avatarconversa">
+          <img
+            src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
+            class="usuario"
+          />
+        </div>
+        <div class="detalhes">
+          <aside class="detalhes_nome">
+            <h4>Maria Silva</h4>
+            <p class="horario">08:20</p>
+          </aside>
+          <aside class="mensagem">
+            <p>O projeto ficou perfeito, obrigada!</p>
+            <b>5</b>
+          </aside>
+        </div>
+      </div>
+    </section>
+  </nav>
 
-            <div class="janeladeconversa naolida">
-                <div class="avatarconversa">
-                    <img src="Imagens/avatar3.png" class="usuario">
-                </div>
-                <div class="detalhes">
-                    <aside class="detalhes_nome">
-                        <h4>João Augusto</h4>
-                        <p class="horario">12:30</p>
-                    </aside>
-                    <aside class="mensagem">
-                        <p>Está disponível para um freela?</p>
-                        <b>3</b>
-                    </aside>
-                </div>
-            </div>
+  <nav class="conversa">
+    <header class="menu">
+      <div class="avatar">
+        <div class="avatarusuario">
+          <img src="https://media.istockphoto.com/id/1300972574/photo/millennial-male-team-leader-organize-virtual-workshop-with-employees-online.jpg?s=2048x2048&w=is&k=20&c=tU5X1sJJ9sIcqthiw5RO388RhKNllo0ZF82LPitfXgU=" class="usuario" />
+        </div>
+        <h4>Sabrina Matos<br /><span>Online</span></h4>
+      </div>
+      <ul class="opcoes">
+        <li><i class='bx bx-dots-vertical-rounded' ></i></li>
+      </ul>
+    </header>
 
-            <div class="janeladeconversa naolida">
-                <div class="avatarconversa">
-                    <img src="Imagens/avatar4.png" class="usuario">
-                </div>
-                <div class="detalhes">
-                    <aside class="detalhes_nome">
-                        <h4>Maria Silva</h4>
-                        <p class="horario">08:20</p>
-                    </aside>
-                    <aside class="mensagem">
-                        <p>O projeto ficou perfeito, obrigada!</p>
-                        <b>5</b>
-                    </aside>
-                </div>
-            </div>
-        </section>            
-    </nav>
+    <section class="corpo_conversa">
+      <div class="mensagem_usuario outrem">
+        <p>Hi bro.<span>12:00</span></p>
+      </div>
 
-    <nav class="conversa">
-        <header class="menu">
-            <div class="avatar">
-                <div class="avatarusuario">
-                    <img src="Imagens/avatar2.png" class="usuario">
-                </div>
-                <h4>Sabrina Matos<br><span>Online</span></h4>
-            </div>
-            <ul class="opcoes">
-                <li>icon</li>
-                <li class="anexo">icon</li>
-                <li>icon</li>
-            </ul>
-        </header>
+      <div class="mensagem_usuario proprio">
+        <p>
+          Yhhh<span>22:40</span>
+        </p>
+      </div>
 
-        <section class="corpo_conversa">
-            <div class="mensagem_usuario outrem">
-                <p>Olá, bom dia<span>12:00</span></p>
-            </div>
+      <div class="mensagem_usuario proprio">
+        <p>
+          Yhhh<span>22:40</span>
+        </p>
+      </div>
 
-            <div class="mensagem_usuario proprio">
-                <p>Oi, tudo bem?<span>22:40</span>
-                    icon
-                </p>
-            </div>
-        </section>
+      <div class="mensagem_usuario proprio">
+        <p>
+          h<span>22:40</span>
+        </p>
+      </div>
 
-        <section class="input_conversa">
-            icon
-            <input type="text" placeholder="Digite uma mensagem">
-            icon
-        </section>
-    </nav>
+      <div class="mensagem_usuario proprio">
+        <p>
+          Yhhh<span>22:40</span>
+        </p>
+      </div>
+    </section>
+
+    <section class="input_conversa flex items-center justify-center">
+        <i class='bx bx-smile text-[2rem] cursor-pointer'></i>
+      <input type="text" placeholder="Type a message" />
+      <i class='bx bxs-send text-[2rem] cursor-pointer'></i>
+    </section>
+  </nav>
 </main>
