feat(chat): chat basic teplate done

--- a/src/app/features/chats/pages/chat-home/chat-home.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-home.component.html
@@ -7,15 +7,34 @@
           class="usuario"
         />
       </div>
-      <ul class="opcoes items-center justify-center">
+      <ul class="opcoes items-center justify-center gap-3">
         <li>
           <i class="mt-5 bx bxs-chat"></i>
         </li>
         <li>
           <i class="bx bx-dots-vertical-rounded"></i>
+
+          <div class="relative hidden">
+
+            <div class="top-[30px] right-[-12px] absolute w-[100px] h-[100px] bg-gray-300 z-10"
+            style="padding: 10px 0px;">
+
+              <ul >
+                <li class="flex align-center justify-center hover:bg-gray-400">
+                  <span class="text-black text-[20px]">Profile</span>
+                </li>
+              </ul>
+
+            </div>
+
+          </div>
+
         </li>
       </ul>
     </header>
+
+
+
 
     <section class="listadeconversas">
       <div class="janeladeconversa hover:bg-gray-100">
