--- a/src/app/features/chats/pages/chat-home/chat-home.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-home.component.html
@@ -6,26 +6,31 @@
           src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
           class="usuario"
         />
+        
       </div>
       <ul class="opcoes items-center justify-center gap-3">
-        <li>
-          <i class="mt-5 bx bxs-chat"></i>
-        </li>
+   
         <li>
           <i class="bx bx-dots-vertical-rounded"></i>
 
-          <div class="relative hidden">
+          <div class="relative">
             <div
               class="top-[30px] right-[-12px] absolute w-[100px] h-[100px] bg-gray-300 z-10"
               style="padding: 10px 0px"
             >
-              <ul>
-                <li class="flex align-center justify-center hover:bg-gray-400">
-                  <span class="text-black text-[20px]">Profile</span>
+              <ul style="display: flex;">
+                <li>
+                  <i class='bx bx-search-alt-2'></i>
                 </li>
+                <li>
+                  fd
+                </li>
+
               </ul>
             </div>
           </div>
+
+
         </li>
       </ul>
     </header>
