feat(chat): added serach inut

--- a/src/app/features/chats/pages/chat-home/chat-home.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-home.component.html
@@ -9,11 +9,15 @@
         
       </div>
       <ul class="opcoes items-center justify-center gap-3">
-   
+        <li>
+          <i class='bx bx-search-alt-2' ></i>
+        </li>
+
         <li>
           <i class="bx bx-dots-vertical-rounded"></i>
 
-          <div class="relative">
+          <!-- Toggle Div -->
+          <div class="relative hidden">
             <div
               class="top-[30px] right-[-12px] absolute w-[100px] h-[100px] bg-gray-300 z-10"
               style="padding: 10px 0px"
