--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
@@ -1,1 +1,8 @@
-<p>search-user-modal works!</p>
+<ng-template cdkPortal>
+    <div style="
+        width: 100px;
+        height: 100px;
+        background-color: blue;">
+
+    </div>
+</ng-template>
