--- a/src/app/features/chats/pages/chat-home/chat-top-header/chat-top-header.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/chat-top-header.component.html
@@ -1,4 +1,3 @@
- class="menu"
   <div class="avatarusuario">
     <img
       src="https://images.squarespace-cdn.com/content/v1/536e785fe4b0b84b930da48c/1647629536395-XY6G5LJK3LL7J02NUT50/Online+Dating+Photographer+000001.jpg?format=1500w"
@@ -28,4 +27,6 @@
         </div>
       </div>
     </li>
+    <app-search-user-modal></app-search-user-modal>
   </ul>
+
