--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
@@ -3,6 +3,7 @@
         width: 100px;
         height: 100px;
         background-color: blue;">
+        hello world modal
 
     </div>
 </ng-template>
