--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/autocomplete-user-boxes/autocomplete-user-boxes.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/autocomplete-user-boxes/autocomplete-user-boxes.component.html
@@ -1,4 +1,5 @@
 <div
+(click)="onClickBox()"
 class="px-3 py-3 hover:bg-gray-100 flex items-center cursor-pointer border-b border-gray-100"
 >
 <div
