feat(chat); open chat working

--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/open-chat-button/open-chat-button.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/open-chat-button/open-chat-button.component.html
@@ -1,4 +1,9 @@
-<div>
-    <i class='bx bxs-message-rounded-dots mr-1' ></i>
+<button
+  (click)="checkConversationStatus()"
+  class="bg-white text-blue-500 hover:bg-gray-100 font-medium py-2 px-6 rounded-lg shadow transition duration-150 flex items-center justify-center w-full"
+>
+  <div class="h-full w-full">
+    <i class="bx bxs-message-rounded-dots mr-1"></i>
     Open Chat
-</div>
+  </div>
+</button>
