--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/open-chat-button/open-chat-button.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/open-chat-button/open-chat-button.component.html
@@ -15,7 +15,7 @@
         </div>
 
     } 
-    @else if (requestConversatoin()) {
+    @else if (requestConversation()) {
       <i class='bx bx-send mr-1'></i>
       Sent Request
     }
