feat(chat): chat request modal done

--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/search-user-modal.component.html
@@ -51,7 +51,7 @@
           Search...
         </button>
         } @else {
-        <app-open-chat-button [userId]="selectedUser?._id || ''"></app-open-chat-button>
+        <app-open-chat-button (onCloseModal)="detachModal()" [userId]="selectedUser?._id || ''"></app-open-chat-button>
         }
       </div>
     </div>
