--- a/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/open-chat-button/open-chat-button.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/search-user-modal/open-chat-button/open-chat-button.component.html
@@ -4,7 +4,7 @@
 >
   <div style="display: flex; align-items: center; justify-content: center;" class="h-full w-full">
 
-    @if (isLoading()) {
+    @if (isLoading() || requestConversationLoading()) {
 
         <div role="status">
           <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,8 +16,10 @@
 
     } 
     @else if (requestConversation()) {
-      <i class='bx bx-send mr-1'></i>
-      Sent Request
+      <div>
+        <i class='bx bx-send mr-1'></i>
+        Sent Request
+      </div>
     }
     @else {
       <i class="bx bxs-message-rounded-dots mr-1"></i>
