feat(chat): request-modal component added

--- a/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/threedot-dropdown.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/threedot-dropdown.component.html
@@ -2,7 +2,7 @@
     <div class="py-1" role="none">
       <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1" id="menu-item-0">Account settings</a>
       <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1" id="menu-item-1">Support</a>
-      <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1" id="menu-item-2">License</a>
+      <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1" id="menu-item-2">Requests</a>
       <button (click)="logOut()" type="button" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1" id="menu-item-3">Sign out</button>
     </div>
-  </div>
+</div>
