--- a/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/threedot-dropdown.component.html
+++ b/src/app/features/chats/pages/chat-home/chat-top-header/threedot-dropdown/threedot-dropdown.component.html
@@ -6,3 +6,5 @@
       <button (click)="logOut()" type="button" class="block w-full px-4 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" tabindex="-1" id="menu-item-3">Sign out</button>
     </div>
 </div>
+
+<app-requests-modal></app-requests-modal>
